--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
-        
-
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.google.gms:google-services:4.0.1' // google-services plugin
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,10 +16,10 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven {
+            url 'https://maven.google.com/'
+        }
         jcenter()
-    }
-}
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    }
 }
