--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
 
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
 
 
