--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,7 @@
         android:largeScreens="true"
         android:normalScreens="true"
         android:smallScreens="true"
-        android:xlargeScreens="true" />
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
+        android:xlargeScreens="true" /> <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -25,11 +24,11 @@
         android:required="false" />
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="false" />
-    <!-- Required OpenGL ES 2.0. for Maps V2 -->
+        android:required="false" /> <!-- Required OpenGL ES 2.0. for Maps V2 -->
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
+
     <application
         android:name=".framework.AppController"
         android:allowBackup="true"
@@ -42,6 +41,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="adjustPan">
+
         <activity
             android:name=".activity.SplashScreenActivity"
             android:label="@string/app_name"
@@ -81,7 +81,16 @@
         <activity
             android:name=".activity.UmpireListActivity"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".activity.TeamDetailActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.UmpireDetailActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".fragments.AddPlayersActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".activity.CreateGroundActivity"
+            android:screenOrientation="portrait"></activity>
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.imagepicker.provider"
