--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -118,6 +118,8 @@
             android:screenOrientation="portrait"></activity>
         <activity android:name=".activity.MyProfileActivity"
             android:screenOrientation="portrait"></activity>
+        <activity android:name=".activity.MatchDetailsActivity"
+            android:screenOrientation="portrait"></activity>
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.imagepicker.provider"
